--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
             transition: all 0.3s ease;
         }
 
-        /* Sidebar - Serif Font & Fixed Position */
+        /* Sidebar - Using Serif font per Sarah's request */
         nav {
             width: var(--sidebar-width);
             background-color: #fcfcfc;
             border-right: 1px solid #ddd;
-            padding: 60px 20px 30px 20px; /* Space for the button at the top */
+            padding: 70px 20px 30px 20px;
             height: 100vh;
             position: fixed;
             left: 0;
@@ -35,12 +35,11 @@
             z-index: 1000;
         }
 
-        /* Class to hide the sidebar */
         .sidebar-hidden nav {
             transform: translateX(-100%);
         }
 
-        /* Menu Button - Styled like lamnguyen.org */
+        /* Menu Toggle Button (Hamburger style) */
         .menu-toggle {
             position: fixed;
             top: 20px;
@@ -49,7 +48,6 @@
             cursor: pointer;
             background: none;
             border: none;
-            padding: 5px;
             display: flex;
             flex-direction: column;
             justify-content: space-around;
@@ -60,12 +58,11 @@
         .menu-toggle span {
             width: 100%;
             height: 3px;
-            background-color: #333; /* Color of the three lines */
+            background-color: #333;
             border-radius: 2px;
-            transition: all 0.3s ease;
         }
 
-        /* Profile & Menu Styling */
+        /* Sidebar Elements */
         .profile-photo {
             width: 150px;
             height: 150px;
@@ -86,7 +83,17 @@
         .sub-item { display: block; text-decoration: none; color: #777; margin-left: 15px; margin-top: 5px; font-size: 0.9em; }
         .sub-item:before { content: "- "; }
 
-        /* Main Content - Adjusts when sidebar is hidden */
+        /* Visitor Counter Styling */
+        .counter-wrapper {
+            margin-top: 40px;
+            padding-top: 20px;
+            border-top: 1px solid #eee;
+            font-family: sans-serif;
+            font-size: 0.75em;
+            color: #999;
+        }
+
+        /* Main Content */
         main {
             margin-left: var(--sidebar-width);
             padding: 60px 80px;
@@ -95,12 +102,9 @@
             flex-grow: 1;
         }
 
-        .sidebar-hidden main {
-            margin-left: 60px; /* Space for the button only */
-        }
+        .sidebar-hidden main { margin-left: 60px; }
 
-        /* Content Headers */
-        h1 { font-size: 3em; text-transform: uppercase; margin-top: 0; margin-bottom: 10px; color: #000; }
+        h1 { font-size: 3em; text-transform: uppercase; margin: 0; color: #000; }
         .blue-line { height: 6px; background-color: var(--primary-blue); width: 100%; margin-bottom: 40px; }
         h2 { text-transform: uppercase; color: #444; margin-top: 40px; border-bottom: 1px solid #eee; padding-bottom: 5px; }
         
@@ -115,10 +119,8 @@
 </head>
 <body>
 
-    <button class="menu-toggle" onclick="toggleMenu()" aria-label="Toggle Menu">
-        <span></span>
-        <span></span>
-        <span></span>
+    <button class="menu-toggle" onclick="toggleMenu()">
+        <span></span><span></span><span></span>
     </button>
 
     <nav id="sidebar">
@@ -142,6 +144,13 @@
         
         <a href="#why-chess" class="menu-item">WHY YOU SHOULD PLAY CHESS</a>
         <a href="#why-math" class="menu-item">WHY YOU SHOULD LEARN MATH</a>
+
+        <div class="counter-wrapper">
+            <p>VISITORS</p>
+            <a href="https://www.hitwebcounter.com" target="_blank">
+                <img src="https://hitwebcounter.com/counter/counter.php?page=SarahNguyenOrg&style=0006&nbdigits=5&type=page&initCount=0" title="Free Counter" Alt="web counter" border="0" />
+            </a>
+        </div>
     </nav>
 
     <main>
