--- a/index.html
+++ b/index.html
@@ -168,12 +168,12 @@
             <h2>Hobbies</h2>
             <div style="margin-bottom: 25px;">
                 <span class="category-label">MATH:</span> 
-                I am learning math. With many <a href="https://artofproblemsolving.com">AoPS features</a>.
+                I am learning math. With many <a href="https://artofproblemsolving.com">AoPS features</a>. I got the <strong>G.O.A.T (Greatest of All Time) National Distinction (top distinction) at the Girls' Adventures in Math (GAIM) - Elementary section</strong>. 
             </div>
             <div>
                 <span class="category-label">CHESS:</span> 
-                Chess and math connect in different ways. Also, I got <strong>1st place in the 2024 North American Youth</strong>
-                and <strong>2nd place in the 2025 Pan American Youth</strong>.
+                Chess and math connect in different ways. Also, I got <strong>Gold medal (champion) in the 2024 North American Youth Chess Championship in the U8 Girls section</strong>
+                and <strong>Silver medal (runner-up) in the 2025 Pan American Youth Chess Championship in the U10 Girls section</strong>.
             </div>
 
             <h2 id="credits">Credits</h2>
